--- a/week2/类数组和函数提升.md
+++ b/week2/类数组和函数提升.md
@@ -126,8 +126,8 @@ Array.prototype.slice.call(a);
 var o = {
     length: 3,
     "0": "j",
-    "2": "r",
-	"1": "l"
+    "2": "r",  
+    "1": "l"
 };
  Array.prototype.slice.call(o,1);
 
@@ -232,4 +232,6 @@ function say() {
 **因为js之前没有块级作用域，规范规定函数只能在顶层作用域和函数作用域之中声明。但ES6规定了可以有块级作用域，每一个浏览器可以有自己的行为**
 - 允许块级作用域中定义函数
 - 函数声明实际上将会类似于使用var声明的函数表达式，函数名将会提升至当前函数作用域顶
-- 同时函数声明也会保持在块级作用域中的提升行为
+- 同时函数声明也会保持在块级作用域中的提升行为  
+
+[if语句对块级的影响](https://segmentfault.com/q/1010000009718528)
