--- a/week2/类数组和函数提升.md
+++ b/week2/类数组和函数提升.md
@@ -42,9 +42,9 @@ var o = {
 </div>
 <script>
     var div = document.getElementById("div1");
-    div.childNodes.length == 2;
-    //可以使用div.childNodes[0]
-    //div.childNodes.item(0)
+    div.children.length == 2;
+    //可以使用div.children[0]
+    //div.children.item(0)
 </script>
 ```
 ```
