--- a/week2/ES6箭头函数2.0.md
+++ b/week2/ES6箭头函数2.0.md
@@ -258,3 +258,8 @@ func(55)
     * 对象原型
     * 结合动态上下文的回调函数
     * 调用构造器
+    
+Reference:
+* [ES6学习笔记：箭头函数](https://www.w3cplus.com/javascript/es6-arrow-function.html)
+* [声明JavaScript函数的六种方法](https://www.w3cplus.com/javascript/6-ways-to-declare-javascript-functions.html)
+* [JavaScript初学者必看“箭头函数”](https://blog.fundebug.com/2017/05/25/arrow-function-for-beginner/)
